--- a/URLShortnerValidator/AppResources.resx
+++ b/URLShortnerValidator/AppResources.resx
@@ -118,7 +118,7 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="Banner" xml:space="preserve">
-    <value>_   _ ___ _    ___ _            _                
+    <value> _   _ ___ _    ___ _            _                
 | | | | _ \ |  / __| |_  ___ _ _| |_ _ _  ___ _ _ 
 | |_| |   / |__\__ \ ' \/ _ \ '_|  _| ' \/ -_) '_|
  \___/|_|_\____|___/_||_\___/_|  \__|_||_\___|_|  
@@ -128,7 +128,8 @@ __   __    _ _    _      _
  \ V / _` | | / _` / _` |  _/ _ \ '_|
   \_/\__,_|_|_\__,_\__,_|\__\___/_|  
                                      
-Paulo Santos
-October.2023</value>
+Paulo Santos - October.2023
+
+</value>
   </data>
 </root>
